Add start button and random element

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>BattleShip Down game</title>
 </head>
 <body>
-    
+    <button id="start">Start</button>
 
     <script src ="assets/js/script.js"></script>
 </body>
